Fixed overflow and added custom scrollbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,4 +8,21 @@
   html {
     @apply font-montserrat;
   }
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgb(28, 25, 23);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgba(107, 114, 128, 0.4);
+    border-radius: 16px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(107, 114, 128, 0.6);
+  }
 }
